<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AADP</string>
    <string name="hello_world">Hello world!</string>
    <string name="event_name">Event Name</string>
    <string name="event_coordinator">Event Coordinator</string>
    <string name="published_date">Published Date</string>
    <string name="event_address">Event Address :</string>
    <string name="event_date">Event Date :</string>
    <string name="event_time">Event Time :</string>
    <string name="title_activity_search_result">Coordinator Search Result</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="contact_name">Name</string>
    <string name="contact_phone">Phone</string>
    <string name="contact_email">Email</string>
    <string name="no_network">No Network available</string>
    <string name="title_activity_story_detail">Story Detail</string>
    <string name="coordinator">Coordinator</string>
    <string name="by">By</string>
    <string name="published">Published :</string>
    <string name="notes">Note :</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="drawer_icon">Drawer Icon</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">Signup Here</string>
    <string name="login">Log In</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="register">Register</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="userName">Username</string>
    <string name="noUser">User not logged in</string>
    <string name="button_label_donate">Donate</string>
    <string name="amount_hint">$ Amount</string>
    <string name="donate_name">Your Name</string>
    <string name="donate_email">Your Email id</string>
    <string name="about_image">About image</string>
    <string name="title_activity_donor">Be a donor</string>
    <string name="title_step1_eligible">Am I eiligible ?</string>
    <string name="title_step2_homekit">Request a homekit</string>
    <string name="favorite">Favorite</string>
    <string name="volunteer">Be a Volunteer</string>
    <string name="be_a_donor">Be a donor</string>
    <string name="button_start_label">Start</string>
    <string name="title_activity_splash_screen">Splash Screen</string>
    <string name="title_activity_volunteer_events">Events by Volunteer</string>
    <string name="openInMaps">Open in Maps</string>
    <string name="step2_contact">Contact Info</string>
    <string name="step2_name">Name:</string>
    <string name="step2_email">Email:</string>
    <string name="step2_addr1">Addr1:</string>
    <string name="step2_addr2">Addr2:</string>
    <string name="step2_city">City:</string>
    <string name="step2_state">State:</string>
    <string name="step2_zip_code">Zip Code:</string>
    <string name="step2_phone">Phone:</string>
    <string name="step2_minority">Are you of ethnic minority?</string>
    <string name="step2_race">If Mixed Race Please Specify:</string>
    <string name="step2_age">Are you 18 to 44 years old?</string>
    <string name="step2_hip_problem">Have neck back hip or spine problems?</string>
    <string name="step2_heart_problem">Any Asthma, Cancer, Diabetes, Hepatitis, and/or Heart Problems?</string>
    <string name="step2_language">Language Preference:</string>
    <string name="step2_notes">Notes:</string>
    <string name="step2_answer_yes">Yes</string>
    <string name="step2_answer_no">No</string>
    <string name="step2_send">Send</string>
    <string name="Step2_note_hint">add comment</string>
    <string name="Step3_title">Get to know more ...</string>

    <string-array name="step2_lang">
        <item>English</item>
        <item>Chinese</item>
        <item>Vietnamese</item>
        <item>Korean</item>
        <item>Spanish</item>
    </string-array>
    
     <string-array name="step3_category">
        <item>The need for donors</item>
        <item>Who needs transplant</item>
        <item>Donation Process</item>
        <item>Hold a registration drive</item>
        <item>Join AADP Team</item>
        <item>More about registration</item>
    </string-array>

</resources>