<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="152dp"
        android:ems="10"
        android:hint="@string/userName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/etUserName"
        android:layout_centerVertical="true"
        android:ems="10" 
        android:inputType="textPassword"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/btLogIn"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_below="@id/etPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:background="@drawable/rounded_button"
        android:textColor="@color/white"
       />

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btLogIn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/signup" />

</RelativeLayout>
