<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/etDonationAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        
        android:hint="@string/amount_hint" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/etDonationName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="88dp"
        android:ems="10"
        android:hint="@string/donate_name" />

    <Button
        android:id="@+id/btnDonate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etDonationAmount"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:text="@string/button_label_donate" />

    <EditText
        android:id="@+id/etDonationEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etDonationName"
        android:layout_below="@+id/etDonationName"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/donate_email" />

</RelativeLayout>
