<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}"
    android:background="@color/white" >

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/etUserName"
        android:layout_below="@id/etUserName"
        android:layout_marginTop="20dp"
        android:ems="10" 
        android:inputType="textEmailAddress"
        android:hint="@string/email"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/etUserName"
        android:layout_below="@id/etEmail"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/etPassword"
        android:layout_below="@id/etPassword"
		android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/confirmPassword" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_below="@+id/etConfirmPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/register"
        android:background="@drawable/rounded_button"
        android:textColor="@color/white" />

    <ImageView
        android:id="@+id/ivAadpIcon"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:src="@drawable/aadp" />

    <ImageView
        android:id="@+id/ivAadpText"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignRight="@+id/etUserName"
        android:layout_below="@+id/ivAadpIcon"
        android:src="@drawable/aadp_text" />

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivAadpText"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/userName" />

</RelativeLayout>
