<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_launcher" 
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ivProfileImage"
        android:layout_alignLeft="@+id/tvPrimaryPhone"
        android:text="@string/contact_email" />

    <TextView
        android:id="@+id/tvPrimaryPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvEmail"
        android:layout_alignLeft="@+id/tvContactName"
        android:layout_marginBottom="16dp"
        android:text="@string/contact_phone" />

    <TextView
        android:id="@+id/tvContactName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:text="@string/contact_name" 
        android:textSize="16sp"
        android:textStyle="bold"/>
</RelativeLayout>
